--- a/reinforce.ipynb
+++ b/reinforce.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -11,20 +11,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded model from disk\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\tkinter\\__init__.py\", line 1550, in __call__\n",
-      "    return self.func(*args)\n",
-      "  File \"<ipython-input-3-9dcda0c0e5be>\", line 186, in get_response\n",
-      "    self.emoNegvalue_lbl['text'] = response[4]\n",
-      "IndexError: index 4 is out of bounds for axis 0 with size 1\n"
+      "Loaded model from disk\n",
+      "Loaded word_frequencies data from disk\n",
+      "1 -1\n",
+      "(1, 30, 10003)\n",
+      "prizes prizes prizes prizes prizes prizes prizes prizes prizes prizes prizes prizes poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom\n",
+      "1 -1\n",
+      "(1, 30, 10003)\n",
+      "prizes prizes prizes poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom\n",
+      "1 -1\n",
+      "(1, 30, 10003)\n",
+      "prizes prizes prizes poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom\n"
      ]
     }
    ],
@@ -53,8 +50,9 @@
     "        #self.initialize()\n",
     "        self.load_model()\n",
     "        self.w2v_model = w2v.initialize()\n",
-    "        self.sys_prediction=w2v.vectorize( '1 9 1 @Hi', pad_length = 30,model=self.w2v_model )\n",
-    "        \n",
+    "        self.out='1 9 1 @Hi'\n",
+    "        print( 'Loaded word_frequencies data from disk' )\n",
+    "        self.word_freqs = np.load('words_in_order_of_freq.npy') \n",
     "        self.embed_dim = 300\n",
     "        self.data_dim = 1\n",
     "        self.timesteps = 26\n",
@@ -112,47 +110,28 @@
     "        #User_B = \"1 5 5 @yeah well I hate you and never want to see you again! \"\n",
     "        #User_A1 = w2v.vectorize( w2v_model, User_A1 , pad_length = max_sent_length)\n",
     "        Sen_User_B = self.RateSentiment(User_B)\n",
+    "        print(Sen_User_B)\n",
     "        #self.reinforcement_learn(Sen_User_B,self.sys_prediction)\n",
     "        \n",
     "        User_B = Sen_User_B[0]+\" \"+str(11-int(Sen_User_B[0])-int(Sen_User_B[3]))+\" \"+Sen_User_B[3]+\" \"+\"@\"+User_B\n",
     "        User_B_in  = w2v.vectorize( User_B, pad_length = 30,model=self.w2v_model ) \n",
-    "        \n",
-    "        self.user_input = [ np.array( [self.sys_prediction]), np.array([User_B_in]) ]\n",
+    "        User_A = w2v.vectorize( self.out, pad_length = 30,model=self.w2v_model ) \n",
+    "        self.user_input = [ np.array( [User_A]).reshape(1,30,101), np.array([User_B_in]).reshape(1,30,101) ]\n",
+    "        #print(self.sys_prediction.shape)\n",
     "        self.sys_prediction = self.one_hot_chat_model.predict(self.user_input)\n",
-    "        \n",
-    "        words = []\n",
-    "        w\n",
-    "        for word_vec in self.sys_prediction:\n",
-    "            \n",
-    "        return self.sys_prediction\n",
+    "        print(self.sys_prediction.shape)\n",
+    "        sentence=np.argmax(self.sys_prediction,axis=2)\n",
+    "        #w2v.one_hot_unvectorize(np.argmax(self.sys_prediction,axis=2))\n",
+    "        pred_words=[]\n",
+    "        for i in range(30):\n",
+    "            pred_words.append(self.word_freqs[sentence[0,i]].decode('utf-8'))\n",
+    "        self.out=\" \".join(pred_words)\n",
+    "        print(self.out)    \n",
+    "        return (self.out)\n",
     "        #sys_pred = np.argmax(prediction, axis=2)\n",
     "        #self.sys_prediction = (sys_pred-10)/10\n",
     "        #return self.most_likely_sent( self.sys_prediction[0], metadata['w2idx'].keys(),self.w2v_model)\n",
     "    \n",
-    "    def cosign_similarity( a, b):\n",
-    "        dot = np.dot(a,b)\n",
-    "        norm = np.linalg.norm(a-b)\n",
-    "        return( dot/norm )\n",
-    "\n",
-    "    def most_likely_word( prediction, words, w2v_model ):\n",
-    "        ret = \"\"\n",
-    "        max_so_far = self.cosign_similarity( np.array([1]+[0]*299),prediction ) #must be better than blank\n",
-    "        #Best word in dictionary\n",
-    "        for word in words:\n",
-    "            similarity = cosign_similarity( w2v.vectorize(w2v_model,word)[0], prediction )\n",
-    "            if similarity > max_so_far:\n",
-    "                max_so_far = similarity\n",
-    "                ret = word    \n",
-    "        return( ret )\n",
-    "\n",
-    "    def most_likely_sent( prediction_vec, words, w2v_model ):\n",
-    "        predicted_words = []\n",
-    "        for prediction in prediction_vec:\n",
-    "            predicted_words.append( most_likely_word(prediction,words,w2v_model))\n",
-    "        ret = \" \".join(predicted_words)\n",
-    "        return( ret )\n",
-    "\n",
-    "\n",
     "class TkinterGUIExample(tk.Tk):\n",
     "\n",
     "    def __init__(self, *args, **kwargs):\n",
@@ -690,6 +669,30 @@
     "# serialize weights to HDF5\n",
     "one_hot_chat_model.save_weights(\"one_hot_chat_net.h5\")\n",
     "print(\"Saved model to disk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'decode'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-b8146daa09b5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mword_freqs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'words_in_order_of_freq.npy'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mword_freqs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'decode'"
+     ]
+    }
+   ],
+   "source": [
+    "word_freqs = np.load('words_in_order_of_freq.npy') \n",
+    "print(word_freqs.decode('utf-8'))"
    ]
   },
   {
