--- a/reinforce.ipynb
+++ b/reinforce.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -15,13 +15,7 @@
       "Loaded word_frequencies data from disk\n",
       "1 -1\n",
       "(1, 30, 10003)\n",
-      "prizes prizes prizes prizes prizes prizes prizes prizes prizes prizes prizes prizes poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom\n",
-      "1 -1\n",
-      "(1, 30, 10003)\n",
-      "prizes prizes prizes poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom\n",
-      "1 -1\n",
-      "(1, 30, 10003)\n",
-      "prizes prizes prizes poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom\n"
+      "poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom poolroom\n"
      ]
     }
    ],
@@ -50,15 +44,17 @@
     "        #self.initialize()\n",
     "        self.load_model()\n",
     "        self.w2v_model = w2v.initialize()\n",
+    "        self.count=0\n",
     "        self.out='1 9 1 @Hi'\n",
     "        print( 'Loaded word_frequencies data from disk' )\n",
     "        self.word_freqs = np.load('words_in_order_of_freq.npy') \n",
-    "        self.embed_dim = 300\n",
+    "        self.embed_dim = 101\n",
     "        self.data_dim = 1\n",
     "        self.timesteps = 26\n",
-    "        self.vocab_size = 8100\n",
+    "        self.vocab_size = 10000\n",
     "        self.emot_size = 4\n",
     "        self.max_sent_length = 30\n",
+    "        self.reinforce = 'neutral'\n",
     "    def save_model(self):\n",
     "        # serialize model to JSON\n",
     "        model_json = self.one_hot_chat_model.to_json()\n",
@@ -90,14 +86,18 @@
     "            \n",
     "    def reinforcement_learn(self,user_emotion,sys_response):\n",
     "        total_emo = int(user_emotion[0]) - int(user_emotion[3])\n",
-    "        sys_res = np.argmax(sys_response, axis=2)\n",
+    "        sys_res = np.argmax(sys_response,axis=2)\n",
+    "        adam = keras.optimizers.Adam(lr = 100)#default 0.001\n",
+    "        self.one_hot_chat_model.compile( optimizer=adam,loss = 'categorical_crossentropy',metrics = ['accuracy'])\n",
     "        if total_emo > 0:\n",
     "            #sys_res = (10*sys_res)+10\n",
-    "            sys_res_categorical=to_categorical(sys_res.astype(int),VOCAB_SIZE+3).reshape((1,EMBED_DIM,VOCAB_SIZE+3))\n",
-    "            self.model_ABA.fit(self.user_input,sys_res_categorical)\n",
+    "            sys_res_categorical=to_categorical(sys_res.astype(int),self.vocab_size+3).reshape((1,self.max_sent_length,self.vocab_size+3))\n",
+    "            self.reinforce='positive'\n",
+    "            self.one_hot_chat_model.fit(self.user_input,sys_res_categorical,epochs=3)\n",
     "        else:\n",
-    "            sys_res_categorical=to_categorical(sys_res.astype(int),VOCAB_SIZE+3).reshape((1,300,-1,20))*(-1)\n",
-    "            self.model_ABA.fit(self.user_input,sys_res_categorical)\n",
+    "            sys_res_categorical=to_categorical(sys_res.astype(int),self.vocab_size+3).reshape((1,self.max_sent_length,self.vocab_size+3))*(-1)\n",
+    "            self.reinforce='negative'\n",
+    "            self.one_hot_chat_model.fit(self.user_input,sys_res_categorical,epochs=3)\n",
     "        self.save_model()\n",
     "        self.load_model()\n",
     "        \n",
@@ -111,12 +111,14 @@
     "        #User_A1 = w2v.vectorize( w2v_model, User_A1 , pad_length = max_sent_length)\n",
     "        Sen_User_B = self.RateSentiment(User_B)\n",
     "        print(Sen_User_B)\n",
-    "        #self.reinforcement_learn(Sen_User_B,self.sys_prediction)\n",
+    "        self.count=self.count+1\n",
+    "        if self.count>1:\n",
+    "            self.reinforcement_learn(Sen_User_B,self.sys_prediction)\n",
     "        \n",
     "        User_B = Sen_User_B[0]+\" \"+str(11-int(Sen_User_B[0])-int(Sen_User_B[3]))+\" \"+Sen_User_B[3]+\" \"+\"@\"+User_B\n",
-    "        User_B_in  = w2v.vectorize( User_B, pad_length = 30,model=self.w2v_model ) \n",
+    "        self.User_B_in  = w2v.vectorize( User_B, pad_length = 30,model=self.w2v_model ) \n",
     "        User_A = w2v.vectorize( self.out, pad_length = 30,model=self.w2v_model ) \n",
-    "        self.user_input = [ np.array( [User_A]).reshape(1,30,101), np.array([User_B_in]).reshape(1,30,101) ]\n",
+    "        self.user_input = [ np.array( [User_A]).reshape(1,30,101), np.array([self.User_B_in]).reshape(1,30,101) ]\n",
     "        #print(self.sys_prediction.shape)\n",
     "        self.sys_prediction = self.one_hot_chat_model.predict(self.user_input)\n",
     "        print(self.sys_prediction.shape)\n",
@@ -186,6 +188,8 @@
     "        self.uemoNeuvalue_lbl = ttk.Label(self, text='Neu emotion',foreground='black')\n",
     "        self.uemoNeuvalue_lbl.grid(column=1, row=4, sticky='nesw', padx=3, pady=3)\n",
     "        \n",
+    "        self.reinforce_lbl = ttk.Label(self, text='Reinforcement',foreground='red')\n",
+    "        self.reinforce_lbl.grid(column=2, row=1, sticky='nesw', padx=3, pady=3)\n",
     "    \n",
     "        \n",
     "    def get_response(self):\n",
@@ -203,6 +207,7 @@
     "        self.uemoPosvalue_lbl['text'] = x[0]\n",
     "        self.uemoNegvalue_lbl['text'] = x[3]\n",
     "        self.uemoNeuvalue_lbl['text'] = str(11-int(x[0])-int(x[3]))\n",
+    "        self.reinforce_lbl['text'] = self.neuralbot.reinforce + ' Reinforcement'\n",
     "        self.conversation['state'] = 'normal'\n",
     "        self.conversation.insert(\n",
     "            tk.END, \"Human: \" + user_input + \"\\n\" + \"ChatBot: \" + str(response[7:]) + \"\\n\"\n",
@@ -329,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -338,14 +343,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n",
-      "C:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\site-packages\\gensim\\utils.py:855: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
-      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n",
-      "C:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\site-packages\\ipykernel\\__main__.py:20: UserWarning: Update your `LSTM` call to the Keras 2 API: `LSTM(300, return_sequences=True, input_shape=(30, 300), recurrent_dropout=0.2, dropout=0.2)`\n",
-      "C:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\site-packages\\ipykernel\\__main__.py:29: UserWarning: Update your `LSTM` call to the Keras 2 API: `LSTM(300, return_sequences=True, input_shape=(30, 300), recurrent_dropout=0.2, dropout=0.2)`\n",
+      "C:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\site-packages\\ipykernel\\__main__.py:20: UserWarning: Update your `LSTM` call to the Keras 2 API: `LSTM(300, input_shape=(30, 300), dropout=0.2, return_sequences=True, recurrent_dropout=0.2)`\n",
+      "C:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\site-packages\\ipykernel\\__main__.py:29: UserWarning: Update your `LSTM` call to the Keras 2 API: `LSTM(300, input_shape=(30, 300), dropout=0.2, return_sequences=True, recurrent_dropout=0.2)`\n",
       "C:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\site-packages\\ipykernel\\__main__.py:38: UserWarning: The `Merge` layer is deprecated and will be removed after 08/2017. Use instead layers from `keras.layers.merge`, e.g. `add`, `concatenate`, etc.\n",
-      "C:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\site-packages\\ipykernel\\__main__.py:39: UserWarning: Update your `LSTM` call to the Keras 2 API: `LSTM(300, return_sequences=True, recurrent_dropout=0.2, dropout=0.2)`\n",
-      "C:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\site-packages\\ipykernel\\__main__.py:40: UserWarning: Update your `LSTM` call to the Keras 2 API: `LSTM(300, return_sequences=True, recurrent_dropout=0.2, dropout=0.2)`\n"
+      "C:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\site-packages\\ipykernel\\__main__.py:39: UserWarning: Update your `LSTM` call to the Keras 2 API: `LSTM(300, dropout=0.2, return_sequences=True, recurrent_dropout=0.2)`\n",
+      "C:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\site-packages\\ipykernel\\__main__.py:40: UserWarning: Update your `LSTM` call to the Keras 2 API: `LSTM(300, dropout=0.2, return_sequences=True, recurrent_dropout=0.2)`\n"
      ]
     }
    ],
@@ -396,7 +398,127 @@
     "      optimizer='rmsprop',\n",
     "      metrics=['accuracy']\n",
     "      )\n",
-    "model_ABA.load_weights('model_ABA_weights.h5')\n"
+    "model_ABA.load_weights('model_ABA_weights.h5')\n",
+    "\n",
+    "def cosign_similarity( a, b):\n",
+    "    dot = np.dot(a,b)\n",
+    "    norm = np.linalg.norm(a-b)\n",
+    "    return( dot/norm )\n",
+    "\n",
+    "def most_likely_word( prediction, words, w2v_model ):\n",
+    "    ret = \"\"\n",
+    "    max_so_far = cosign_similarity( np.array([1]+[0]*299),prediction ) #must be better than blank\n",
+    "    #Best word in dictionary\n",
+    "    for word in words:\n",
+    "        similarity = cosign_similarity( w2v.vectorize(w2v_model,word)[0], prediction )\n",
+    "        if similarity > max_so_far:\n",
+    "            max_so_far = similarity\n",
+    "            ret = word    \n",
+    "    return( ret )\n",
+    "\n",
+    "def most_likely_sent( prediction_vec, words, w2v_model ):\n",
+    "    predicted_words = []\n",
+    "    for prediction in prediction_vec:\n",
+    "        predicted_words.append( most_likely_word(prediction,words,w2v_model))\n",
+    "    ret = \" \".join(predicted_words)\n",
+    "    return( ret )\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "w2v_model = w2v.initialize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "w2v.save_unknown_vectors({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w2v.get_unknown_vectors()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "w2v.unvectorize_initialize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 301)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Error when checking : expected lstm_1_input to have 3 dimensions, but got array with shape (1, 30)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-039be23b4c68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mUser_B\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0muser_input\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mUser_A1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mUser_B\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprediction\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel_ABA\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0muser_input\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmost_likely_sent\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mprediction\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmetadata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'w2idx'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mw2v_model\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\site-packages\\keras\\models.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, x, batch_size, verbose)\u001b[0m\n\u001b[1;32m    897\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    898\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuild\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 899\u001b[0;31m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    900\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    901\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mpredict_on_batch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, x, batch_size, verbose)\u001b[0m\n\u001b[1;32m   1560\u001b[0m         x = _standardize_input_data(x, self._feed_input_names,\n\u001b[1;32m   1561\u001b[0m                                     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_feed_input_shapes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1562\u001b[0;31m                                     check_batch_axis=False)\n\u001b[0m\u001b[1;32m   1563\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstateful\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1564\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mbatch_size\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mbatch_size\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36m_standardize_input_data\u001b[0;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[1;32m    125\u001b[0m                                  \u001b[1;34m' to have '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshapes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    126\u001b[0m                                  \u001b[1;34m' dimensions, but got array with shape '\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 127\u001b[0;31m                                  str(array.shape))\n\u001b[0m\u001b[1;32m    128\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mref_dim\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshapes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    129\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Error when checking : expected lstm_1_input to have 3 dimensions, but got array with shape (1, 30)"
+     ]
+    }
+   ],
+   "source": [
+    "#unknown_vectors=[]\n",
+    "User_A1 = \"5 5 1 @I really love you. I think I want to marry you!\"\n",
+    "User_B = \"1 5 5 @yeah well I hate you and never want to see you again! \"\n",
+    "User_A1 = w2v.vectorize( User_A1,model=w2v_model , pad_length = max_sent_length) \n",
+    "User_B  = w2v.vectorize( User_B,model=w2v_model,  pad_length = max_sent_length)\n",
+    "print(np.array([User_B[0]]).shape)\n",
+    "user_input = [ np.array( [User_A1]), np.array([User_B]) ]\n",
+    "prediction = model_ABA.predict(user_input)\n",
+    "print(most_likely_sent( prediction[0], metadata['w2idx'].keys(),w2v_model))"
    ]
   },
   {
